[package]
name = "safenet"
version = "0.1.0"
edition = "2021"

[dependencies]
blake2 = { version = "0.10.6" }
chacha20poly1305 = "0.10.1"
once_cell = "1.18"
p384 = "0.13"
pbkdf2 = "0.12"
rand = "0.8.5"
# tinyhttp = { git = "https://github.com/mateocabanal/tinyhttp", default-features = false, features = ["sys"] }
log = "0.4.17"
generic-array = "0.14.7"
uuid = { version = "1.3.0", features = ["v4", "fast-rng", "rng"] }
local-ip-address = "0.5.1"
cfg-if = "1.0.0"
pqc_kyber = { version = "0.7.1", features = ["std", "kyber1024"] }

[dev-dependencies]
clap = { version = "4.2.1", features = ["derive"] }
simple_logger = "4.0.0"
dialoguer = "0.11"
serde = "*"
axum = "*"
tinyhttp = "0.4.0-rc1"
tokio = { version = "1.33", features = ["full"] }
minreq = "2.10"

[[example]]
name = "server"
required-features = ["server"]

[features]
default = ["server", "client"]
client = []
server = []
