[package]
name = "safenet"
version = "0.1.0"
edition = "2021"

[dependencies]
blake2 = { version = "0.10", default-features = false }
chacha20poly1305 = "0.10"
p384 = { version = "0.13", optional = true }
pbkdf2 = "0.12"
rand = "0.8.5"
# tinyhttp = { git = "https://github.com/mateocabanal/tinyhttp", default-features = false, features = ["sys"] }
log = "0.4"
generic-array = "0.14.7"
uuid = { version = "1.7.0", features = ["v4", "fast-rng", "rng"] }
local-ip-address = "0.5.1"
cfg-if = "1.0.0"
pqc_kyber = { version = "0.7.1", features = ["std", "kyber1024"] }
ring = { version = "0.17.7", features = ["wasm32_unknown_unknown_js"], optional = true }
thiserror = "1"
pqc_dilithium = { git = "https://github.com/kibernetikos/dilithium", branch = "feature/keypair_constructor", features = ["mode5", "wasm"] }
downcast-rs = "1"
dyn-clone = "1.0.16"

# Until this is PR is accepted, we gotta use it
[patch.crates-io]

[dev-dependencies]
clap = { version = "4.2.1", features = ["derive"] }
simple_logger = "4.0.0"
dialoguer = "0.11"
serde = "*"
axum = "*"
warp = "*"
tinyhttp = { version = "0.4.0-rc5", features=["log"], default-features = false }
tokio = { version = "1.33", features = ["full"] }
minreq = "2.10"
tungstenite = "0.20.1"
futures = "0.3.28"
futures-util = "0.3.28"
tokio-stream = "0.1.14"
criterion = "0.5.1"

[features]
default = ["server", "client", "rust_crypto"]
client = []
server = []
_clone = ["rust_crypto"]
rust_crypto = ["dep:p384"]
ring = ["dep:ring"]

[[bench]]
name = "init_frame_enc"
harness = false

[[bench]]
name = "data_frame_enc"
harness = false

[lib]
crate-type = ["cdylib", "rlib"]
